Prevent Refresh button from wrapping down onto the table below it

--- a/app/assets/stylesheets/unc_custom.css.scss
+++ b/app/assets/stylesheets/unc_custom.css.scss
@@ -727,6 +727,14 @@ table p.name span {
   }
 }
 
+.collections-wrapper {
+  .batch-info {
+    .form-control-lg, .sort-toggle {
+      height: auto;
+    }
+  }
+}
+
 .social-media {
   .sr-only {
     color: $carolina-blue;
